k8s-deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-deployment
  labels:
    app: counter
spec:
  selector:
    matchLabels:
      app: counter
  replicas: 1
  template:
    metadata:
      labels:
        app: counter
    spec:
      containers:
        - name: counter
          image: "sureshdst1/counter:v1.0.0"
          resources:
            limits:
              memory: 50Mi
            requests:
              cpu: 100m
              memory: 20Mi
          ports:
          - containerPort: 8080
          - containerPort: 9201
