k8s-deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter-ing
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
  labels:
    app: counter
spec:
  rules:
    - http:
        paths:
          - path: /counter
            pathType: Prefix
            backend:
              service:
                name: counter-svc
                port: 
                  number: 8080
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: metrics-svc
                port: 
                  number: 9201
